@@ -8,13 +8,14 @@ import java.util.Scanner;
 
 public class App {
     public static void main(String[] args) {
-        Locale.setDefault(Locale.of("sv", "SE"));
+        Locale swedishLocale = new Locale("sv", "SE");
+        Locale.setDefault(swedishLocale);
         Scanner sc = new Scanner(System.in);
         double[] electricPrices = new double[24];
 
         int Choice;
         do {
-            String meny = """
+            String menu = """
                     Elpriser
                     ========
                     1. Inmatning
@@ -23,8 +24,8 @@ public class App {
                     4. Bästa Laddningstid (4h)
                     e. Avsluta
                     """;
-            System.out.print(meny + "\n");
-            //  System.out.print("Välj ett alternativ: \n");
+            System.out.print(menu + "\n");
+            System.out.print("Välj ett alternativ: \n");
             String userInput = sc.next();
             Choice = userInput.charAt(0);
 
@@ -37,7 +38,9 @@ public class App {
                     break;
                 case '3':
                     sortPricesHighToLow(electricPrices);
-
+                    break;
+                case '4':
+                    cheapest4Hours(electricPrices);
                 case 'e', 'E':
                     break;
                 default:
@@ -47,17 +50,41 @@ public class App {
         } while (Choice != 'e' && Choice != 'E');
     }
 
+    private static void cheapest4Hours(double[] electricPrices) {
+        if (electricPrices[0] == 0)
+            System.out.println("Du måste först mata in elpriser");
+
+        double minTotalPrice = Double.MAX_VALUE;
+        int bestStartHour = 0;
+
+        for (int i = 0; i <= electricPrices.length - 4; i++) {
+            double totalPrice = 0;
+            for (int j = i; j < i + 4; j++) {
+                totalPrice += electricPrices[j];
+            }
+            if (totalPrice < minTotalPrice) {
+                minTotalPrice = totalPrice;
+                bestStartHour = i;
+            }
+        }
+        DecimalFormat df = new DecimalFormat("#,##0.##");
+        double averagePrice = minTotalPrice / 4.0;
+        String startTime = (bestStartHour < 10) ? "0" + bestStartHour : String.valueOf(bestStartHour);
+        System.out.print("Påbörja laddning klockan " + startTime + "\n");
+        System.out.print("Medelpris 4h: " + df.format(averagePrice) + " öre/kWh\n");
+    }
+
     private static void sortPricesHighToLow(double[] electricPrices) {
         if (electricPrices[0] == 0) {
             System.out.print("Du måste först mata in elpriser\n");
-        }else {
+        } else {
             HourPricePair[] hourPricePairs = new HourPricePair[24];
             for (int i = 0; i < 24; i++) {
                 hourPricePairs[i] = new HourPricePair(i, (int) electricPrices[i]);
             }
             Arrays.sort(hourPricePairs);
             System.out.print("Timmar sorterad efter pris (Dyrast till billigast)\n");
-            for (HourPricePair pair : hourPricePairs){
+            for (HourPricePair pair : hourPricePairs) {
                 System.out.print(pair + "\n");
             }
         }
@@ -98,7 +125,6 @@ public class App {
             System.out.printf("Lägsta pris: " + minStartTime + "-" + minEndTime + ", " + df.format(minPrice) + " öre/kWh\n");
             System.out.printf("Högsta pris: " + maxStartTime + "-" + maxEndTime + ", " + df.format(maxPrice) + " öre/kWh\n");
         }
-
         System.out.printf("Medelpris: " + dF.format(averagePrice) + " öre/kWh\n");
     }
 
@@ -118,20 +144,23 @@ public class App {
             }
         }
     }
-    static class HourPricePair implements Comparable<HourPricePair>{
+
+    static class HourPricePair implements Comparable<HourPricePair> {
         private final int hour;
         private final int price;
 
-        public HourPricePair(int hour, int price){
+        public HourPricePair(int hour, int price) {
             this.hour = hour;
             this.price = price;
         }
+
         public int compareTo(HourPricePair other) {
             return Double.compare(other.price, this.price);
         }
+
         public String toString() {
             String startTime = (hour < 10) ? "0" + hour : String.valueOf(hour);
-            String endTime = (((hour + 1) % 25)<10) ? "0" + ((hour + 1) % 24) : String.valueOf((hour + 1) % 25);
+            String endTime = (((hour + 1) % 25) < 10) ? "0" + ((hour + 1) % 24) : String.valueOf((hour + 1) % 25);
             return startTime + "-" + endTime + " " + price + " öre";
         }
     }
